Added Submit button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 </div>
 
                 <div style="display:flex;gap:8px;align-items:center">
+                    <button id="btnSubmit" class="btn">Submit Exam</button>
                     <button id="btnCheck" class="btn">Check Answers</button>
                     <div class="small">Tip: Use <strong>Enter</strong> to move forward after answering</div>
                 </div>
